--- a/SourceGeneratorDemo/SourceGeneratorDemo.csproj
+++ b/SourceGeneratorDemo/SourceGeneratorDemo.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyGenerator\MyGenerator.csproj"
+                      OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+  </ItemGroup>
+
 </Project>
